--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -26,6 +26,7 @@ config:
   timelineMinMinute: Minimum time
   timelineGroupGapMinute: Grouping Intervals
   themeColor: Theme color
+  colorMode: Theme Mode
   watcherWhitelist: Monitor whitelist
   faviconService: Favicon service
   scheduledExport: Scheduled export
@@ -57,6 +58,11 @@ config:
       month: Month
   service:
     restart: Restart service
+  appearance:
+    colorMode:
+      light: Light
+      dark: Dark
+      auto: Auto
 plan:
   create: Create plan
   update: Update plan
