定时检查更新状态

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -330,6 +330,9 @@ statusBar:
     search:
       text: Search
       tooltip: Search
+  update:
+    text: New version released
+    tooltip: Click to update
 gridCard:
   move: Move
 sync:
