--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -330,6 +330,9 @@ statusBar:
     search:
       text: 搜索
       tooltip: 搜索
+  update:
+    text: 新版本已发布
+    tooltip: 点击更新
 gridCard:
   move: 移动
 sync:
