--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -286,12 +286,14 @@ widget:
     TEXT_SUMMARY: Text Summary
     DAILY_ACTIVIRY: Daily activity
     RECENT_ACTIVIRY_PIE: Recent activity pie
+    SINGLE_CATEGORY_HEATMAP: Single category heatmap
   subtitle:
     ACTIVE_STATUS_CALENDAR: Summary of Daily Records Over the Past Year
-    SINGLE_CATEGORY_BAR: Daily single item record for the past 30 days
+    SINGLE_CATEGORY_BAR: Daily single category bar in recent days
     TEXT_SUMMARY: Average duration of a single category
     DAILY_ACTIVIRY: Hourly records for 24 hours
     RECENT_ACTIVIRY_PIE: The proportion of various activities in recent days
+    SINGLE_CATEGORY_HEATMAP: Daily single category heatmap in recent days
   column: Occupy column
   row: Occupy row
   singleCategoryBar:
