--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -409,8 +409,8 @@ tour:
     title: 自动计时
     description: 只有在这添加过的软件, 才会被记录, 在设置中添加白名单即可自动添加💻
   step10:
-    title: 日记
-    description: 存放日记的匣子📦
+    title: 第三个维度
+    description: 通过标记标签或是监听的软件, 构建新的集合
   step11:
     title: 记录
     description: 在这里录入数据
