--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -237,6 +237,7 @@ titleBar:
     history: Browser history
     importExport: Import and export
     extension: Extension
+    report: Report
   help:
     desc: Help
     about: About
@@ -495,3 +496,13 @@ help:
   dimension:
     step1: Through the dimension, you can freely classify the **manual recording** and **automatic recording** data and mark them
     step2: For example, create a **game** dimension to install several automatic recording software
+report:
+  select:
+    title: Range
+    week: Week
+    month: Month
+    year: Year
+    custom: Custom range
+  range:
+    title: Custom
+  generate: Generate report
