报表图表展示

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -506,3 +506,8 @@ report:
   range:
     title: Custom
   generate: Generate report
+reportChart:
+  save: Save
+  title:
+    program: Program
+    label: Label
