增加饼状图和历史柱状图

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -511,3 +511,6 @@ reportChart:
   title:
     program: Program
     label: Label
+    domain: Browser visit
+    overview: Overview
+    visit: '{visit} visits'
