--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -435,6 +435,8 @@ history:
     calculating: Calculating...
     empty: No imported data
   tip: The imported browser will automatically synchronize data
+  cancel:
+    button: Cancel sync
 search:
   tab:
     history: History
